syntax = "proto3";
package issuer_pb;
import "google/protobuf/any.proto";

message Payload {
    PayloadAction action = 1;
    AnyData data = 2;
}

enum PayloadAction {
    ISSUE = 0;
    REVOKE = 1;
}

message AnyData {
    google.protobuf.Any data = 1;
}

message Revoke {
    string signature = 1;
}